--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
@@ -6,7 +6,7 @@
 	<ul>
 		<li><a{% if app.request.attributes.get('_route') == 'home' %} class="active"{% endif %} href="{{ path('home') }}" title="Accueil">Accueil</a></li>
 		<li><a href="{{ path('home') }}" title="Association">Association</a></li>
-		<li><a{% if app.request.attributes.get('_route') == 'aml_discography_homepage' %} class="active"{% endif %} href="{{ path('aml_discography_homepage') }}" title="Discographie">Discographie</a></li>
+		<li><a{% if app.request.attributes.get('_route') == 'discography' %} class="active"{% endif %} href="{{ path('discography') }}" title="Discographie">Discographie</a></li>
 		<li><a{% if app.request.attributes.get('_route') == 'blog' %} class="active"{% endif %} href="{{ path('blog') }}" title="Blog">Blog</a></li>
 		<li><a{% if app.request.attributes.get('_route') == 'agenda' %} class="active"{% endif %}  href="{{ path('agenda') }}" title="Agenda">Agenda</a></li>
 		<li><a{% if app.request.attributes.get('_route') == 'liens' %} class="active"{% endif %}  href="{{ path('liens') }}" title="Liens">Liens</a></li>
