--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/header.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/header.html.twig
@@ -12,7 +12,7 @@
 	<div id="logo">
 		<span>Avenir Musical du Limousin</span>
 		<a href="{{ path('home') }}" title="AML 87">
-    		<img src="{{ asset('bundles/amlweb/images/logo_50ans_blanc.png') }}" height="149" alt="AM7 87" />
+    		<img src="{{ asset('bundles/amlweb/images/logo_50ans_blanc.png') }}" height="149" alt="AML 87" />
     	</a>
 	</div>
 	{% endif %}
