--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Blocs/blocNextConcert.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Blocs/blocNextConcert.html.twig
@@ -5,13 +5,15 @@
     <span class="date">{{ nextConcert.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }}</span>
 
     <div class="container-date-description-block">
-        {{ nextConcert.description|raw|wordWarp(300) }}
+        <div>
+            {{ nextConcert.description|raw|wordWarp(300) }}
+        </div>
         {% if nextConcert.url.urlKey is defined and nextConcert.url.urlKey is not empty %}
-            <a href="{{ path('agenda_show_event_rewrite', { 'url_key': nextConcert.url.urlKey }) }}"
-               title="En savoir plus : {{ nextConcert.title }}">Lire la suite</a>
+            <a class="link-view-more" href="{{ path('agenda_show_event_rewrite', { 'url_key': nextConcert.url.urlKey }) }}"
+               title="En savoir plus : {{ nextConcert.title }}">En savoir plus</a>
         {% else %}
-            <a href="{{ path('agenda_show_event', { 'id': nextConcert.id }) }}"
-               title="En savoir plus : {{ nextConcert.title }}">Lire la suite</a>
+            <a class="link-view-more" href="{{ path('agenda_show_event', { 'id': nextConcert.id }) }}"
+               title="En savoir plus : {{ nextConcert.title }}">En savoir plus</a>
         {% endif %}
     </div>
 
