--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
@@ -1,13 +1,17 @@
 <!-- footer -->
-<div id="footer">			
+<div id="footer">
 
-	<ul id="footer-social-links">
-		<li><a href="http://www.facebook.com/pages/Avenir-Musical-du-Limousin/203218471224" id="link-page-fb" class="openout">Retrouvez nous sur Facebook</a></li>
-	</ul>
-	
-	<ul id="footer-links">
-		<li><a href="{{ path('aml_contact_us_index') }}">Nous contacter</a></li>
-		<li> - <a href="#">Partager ce site à un ami</a></li>
-	</ul>
-	
+    <ul id="footer-social-links">
+        <li>
+            <a href="http://www.facebook.com/pages/Avenir-Musical-du-Limousin/203218471224" id="link-page-fb"
+               class="openout">Retrouvez nous sur Facebook</a>
+        </li>
+    </ul>
+
+    <ul id="footer-links">
+        <li><a href="{{ path('aml_contact_us_index') }}">Nous contacter</a></li>
+        <li>- <a{% if app.request.attributes.get('_route') == 'liens' %} class="active"{% endif %}
+                    href="{{ path('liens') }}" title="Liens">Liens</a></li>
+    </ul>
+
 </div>
