--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
@@ -2,9 +2,10 @@
 	File : menu.html.twig
 	Description : Tempalate pour le menu
 #}
-<div id="menu">						
-	<ul>
-		<li><a{% if app.request.attributes.get('_route') == 'home' %} class="active"{% endif %} href="{{ path('home') }}" title="Accueil">Accueil</a></li>
+<div id="menu">
+    <ul>
+        <li><a{% if app.request.attributes.get('_route') == 'home' %} class="active"{% endif %}
+                    href="{{ path('home') }}" title="Accueil">Accueil</a></li>
 
         <li>
             <a{% if app.request.attributes.get('_route') == 'page_show_rewrite'
@@ -14,9 +15,13 @@
             </a>
         </li>
 
-		<li><a{% if app.request.attributes.get('_route') == 'discography' %} class="active"{% endif %} href="{{ path('discography') }}" title="Discographie">Discographie</a></li>
-		<li><a{% if app.request.attributes.get('_route') == 'blog' %} class="active"{% endif %} href="{{ path('blog') }}" title="Blog">Blog</a></li>
-		<li><a{% if app.request.attributes.get('_route') == 'agenda' %} class="active"{% endif %}  href="{{ path('agenda') }}" title="Agenda">Agenda</a></li>
-		<li><a{% if app.request.attributes.get('_route') == 'liens' %} class="active"{% endif %}  href="{{ path('liens') }}" title="Liens">Liens</a></li>
+        <li><a{% if app.request.attributes.get('_route') == 'discography' %} class="active"{% endif %}
+                    href="{{ path('discography') }}" title="Discographie">Discographie</a></li>
+        <li><a{% if app.request.attributes.get('_route') == 'blog' %} class="active"{% endif %}
+                    href="{{ path('blog') }}" title="Blog">Blog</a></li>
+        <li><a{% if app.request.attributes.get('_route') == 'agenda' %} class="active"{% endif %}
+                    href="{{ path('agenda') }}" title="Agenda">Agenda</a></li>
+        <li><a{% if app.request.attributes.get('_route') == 'aml_contact_us_index' %} class="active"{% endif %}
+                    href="{{ path('aml_contact_us_index') }}" title="Nous contacter">Contact</a></li>
     </ul>
 </div>
