--- a/src/Aml/Bundle/UsersBundle/Resources/views/Security/login.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Security/login.html.twig
@@ -1,50 +1,41 @@
-{% extends "AmlWebBundle::layout.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
-
 
 {% block title -%}
     Connexion -
 {%- endblock title %}
 
-{% block body %}
-    <div id="col-left" class="two-cols-content">
+{% block fos_user_content %}
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-        <div class="contenu-page">
+    <form action="{{ path("fos_user_security_check") }}" method="post">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-            {% block fos_user_content %}
-                {% if error %}
-                    <div>{{ error|trans }}</div>
-                {% endif %}
+        <label for="username">{{ 'security.login.username'|trans }}</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-                <form action="{{ path("fos_user_security_check") }}" method="post">
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+        <label for="password">{{ 'security.login.password'|trans }}</label>
+        <input type="password" id="password" name="_password" required="required" />
 
-                    <label for="username">{{ 'security.login.username'|trans }}</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+        <p>
+            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+            <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label><br />
+            <em>
+                Cette option vous permet d'éviter de ressaisir votre mot de passe à chaque accès au site. Attention à ne pas utiliser cette fonction si vous êtes connecté à un ordinateur partagé.
+            </em>
+        </p>
 
-                    <label for="password">{{ 'security.login.password'|trans }}</label>
-                    <input type="password" id="password" name="_password" required="required" />
+        <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    </form>
 
-                    <p>
-                        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label><br />
-                        <em>
-                            Cette option vous permet d'éviter de ressaisir votre mot de passe à chaque accès au site. Attention à ne pas utiliser cette fonction si vous êtes connecté à un ordinateur partagé.
-                        </em>
-                    </p>
+    <p>
+        <a href="{{ path('fos_user_resetting_request') }}" title="Mot de passe oublié ?">Mot de passe oublié ?</a>
+    </p>
+{% endblock %}
 
-                    <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-                </form>
-            {% endblock %}
 
-            <p>
-                <a href="" title="Mot de passe oublié ?">Mot de passe oublié ?</a>
-            </p>
 
-        </div>
-    </div>
-    <div id="col-right">
 
-    </div>
-{%- endblock body %}
