#62: [GoogleAnalytics] add Google Analytics

--- a/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
@@ -27,6 +27,8 @@
     	{% block stylesheets %}{% endblock %}
     	
     	{% block headerJs %}{% endblock %}
+
+        {{ render(controller('ToolsGoogleAnalyticsBundle:Default:index')) }}
 	</head>
 	<body>
 		<div id="global">	
