--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -11,10 +11,12 @@
 
 		<h1>Agenda</h1>
 
-        <div id="agenda-concerts-public">
+        <ul id="agenda-concerts-public">
         {% for key,entity in entities %}
 
-            <div class="event-item">
+            <li class="event-item">
+                <span class="date">{{ entity.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }} :</span>
+
                 <h2>
                     {% if entity.url.urlKey is defined and entity.url.urlKey is not empty %}
                         <a href="{{ path('agenda_show_event_rewrite', { 'url_key': entity.url.urlKey }) }}"
@@ -24,36 +26,10 @@
                            title="{{ entity.title }}">{{ entity.title }}</a>
                     {% endif %}
                 </h2>
-
-                <span class="date">{{ entity.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }}</span>
-
-                {% if entity.picture and entity.picture.webpath %}
-                <div class="event-item-structure event-item-container-thumbnail">
-                    <a rel="prettyPhoto" href="{{ asset(entity.picture.webpath) | apply_filter('evenement_view') }}"
-                       title="{{ entity.title }}" class="thumbnail-list">
-                        <img data-src="holder.js/450x450" alt="450x450" src="{{ asset(entity.picture.webpath) | apply_filter('evenement_list') }}" title="{{ entity.picture.title }}"
-                              class="imagecache imagecache-evenement_list" width="450">
-                    </a>
-                </div>
-                {% endif %}
-
-                <div class="event-item-structure event-item-container-description">
-                    <div>
-                        {{ entity.description|raw|wordWarp }}
-                    </div>
-                    {% if entity.url.urlKey is defined and entity.url.urlKey is not empty %}
-                        <a class="link-view-more" href="{{ path('agenda_show_event_rewrite', { 'url_key': entity.url.urlKey }) }}"
-                           title="{{ entity.title }}">En savoir plus</a>
-                    {% else %}
-                        <a class="link-view-more" href="{{ path('agenda_show_event', { 'id': entity.id }) }}"
-                           title="{{ entity.title }}">En savoir plus</a>
-                    {% endif %}
-                </div>
-            </div>
+            </li>
 
         {% endfor %}
-        </div>
-
+        </ul>
 
 
 	</div>
