--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocPartenaires.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocPartenaires.html.twig
@@ -4,14 +4,17 @@
 <ul id="blocs-evenement-partenaires">
     {% for key,partenaire  in entity.partenaires %}
         <li>
-            {% if partenaire.logo %}
-                <div class="partenaire-visuel">
-                    <img src="{{ asset(partenaire.logo.webpath) }}" alt="{{ partenaire.name }}" title="{{ partenaire.name }}"
-                         class="imagecache imagecache-visuel_blog" width="100">
-                </div>
-            {% else %}
-                {{ partenaire.name }}
-            {% endif %}
+            <div class="partenaire-visuel">
+                <a href="{{ partenaire.url }}" target="_blank">
+                    {% if partenaire.logo.webpath is defined and partenaire.logo.webpath is not empty %}
+                    <img src="{{ asset(partenaire.logo.webpath) | apply_filter('partenaire_thumbnail')  }}"
+                         alt="{{ partenaire.name }}" title="{{ partenaire.name }}"
+                         class="imagecache imagecache-visuel_blog" width="120">
+                    {% else %}
+                        {{ partenaire.name }}
+                    {% endif %}
+                </a>
+            </div>
         </li>
     {% endfor %}
 </ul>
